k8s/base/workloads/istio/virtualservice-web.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - foresee-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web-service
        port:
          number: 3000
